fixed spacing of navbar

--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -2,19 +2,22 @@
 div.container{ 
   border-left: 2px solid #00ff00;
   border-right: 2px solid #00ff00;
+  padding: 0 10% 0 10%;
   text-align:center;
   margin-top: 2%;
+  display: flex;
+  justify-content: space-between;
 }
 
 
 li.container{
   font-size: 15px;
-  padding-right: 10%;
+
 }
 
 .link {
   font-size: 18px;
-  padding-right: 10%;
+
   color: white;
 }
 
